# 1d_gas_dynamics

./: .gitignore  CMakeLists.txt  cmake-format.py  io.f90  main.f90  plot.gp  riemann_problem.f90  utils.f90  vectors.f90
input/: CMakeLists.txt
plots/: CMakeLists.txt
source/: CMakeLists.txt  gas_dynamics.f90  io.f90  main.f90  riemann_problem.f90  utils.f90  vectors.f90
